@@ -63,6 +63,13 @@ structures without first converting the whole structure into a
 string. The CRC of the previous member can be used as the seed for
 calculating the CRC of the next member.
 
+Note that the crc32 algorithm includes a final XOR step. If
+incremental processing is desired then this must be undone before
+using the output of the algorithm as the seed for further
+processing. A simpler alternative is to use the 
+[sectref {PROGRAMMING INTERFACE}] which is intended for this mode of
+operation.
+
 [list_end]
 
 [section {PROGRAMMING INTERFACE}]
